--- a/template-ds-multi.yaml
+++ b/template-ds-multi.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: tensorflow
-        image: piotrowskidariusz/deepspeech:patched
+        image: piotrowskidariusz/deepspeech:test
         env:
           - name: CUDA_VISIBLE_DEVICES
             value: "0"
@@ -77,7 +77,7 @@ spec:
     spec:
       containers:
       - name: tensorflow
-        image: piotrowskidariusz/deepspeech:patched
+        image: piotrowskidariusz/deepspeech:test
         env:
           - name: CUDA_VISIBLE_DEVICES
             value: "0"
@@ -129,7 +129,7 @@ spec:
     spec:
       containers:
       - name: tensorflow
-        image: piotrowskidariusz/deepspeech:patched
+        image: piotrowskidariusz/deepspeech:test
         env:
           - name: CUDA_VISIBLE_DEVICES
             value: ""
